--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,8 @@ spring.thymeleaf.suffix=.html
 
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/support
-spring.datasource.username=root
-spring.datasource.password=parimal@123
-spring.jpa.generate-ddl=true
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.open-in-view=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
-
+spring.data.mongodb.uri=mongodb+srv://Parimal:HekMjgMAjYRL1tsC@cluster0.ipkxefx.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=User
+ spring.data.mongodb.authentication-database=admin
 
