--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,4 @@
-spring.application.name=admistrator
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-
-
-
-
-spring.data.mongodb.uri=mongodb+srv://Parimal:HekMjgMAjYRL1tsC@cluster0.ipkxefx.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=User
- spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.uri=mongodb+srv://rockwellmain:umJW9iSBv3srhL8d@cluster0.q1ugqzq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.database=test
+spring.data.mongodb.authentication-database=admin
 
