--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,6 +1,4 @@
-FROM openjdk:17-jdk-alpine
-WORKDIR /app
-COPY target/your-application.jar /app/application.jar
-EXPOSE 8080
-CMD ["java", "-jar", "/app/application.jar"]
-
+FROM eclipse-temurin:17-jdk-alpine
+VOLUME /tmp
+COPY target/*.jar app.jar
+ENTRYPOINT ["java","-jar","/app.jar"]
